[package]
name = "pay-flux"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
